# scanforge-security-platform/apps/api/openapi.json
@@ -5217,6 +5217,18 @@
               }
             ],
             "title": "Fixed Version"
+          },
+          "ai_annotation": {
+            "anyOf": [
+              {
+                "additionalProperties": true,
+                "type": "object"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Ai Annotation"
           }
         },
         "additionalProperties": true,
